sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value j
		if (plusPetit(i,j)==true){
                                ^AlgBubbleSort1:5: error: not found: value j
			echange(i,j)
                                  ^